framec_tests/language_specific/typescript/v3_outline/negative/pending/missing_brace.frm
@target typescript

system S {
    actions:
        doIt() 
}
